--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,6 +1,15 @@
 /* assets/css/main.css */
 @import 'styles.css';
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Cairo', sans-serif;
+}
+
+[dir="rtl"] {
+  text-align: right;
+}
